Fix styling and spacing

--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -44,15 +44,17 @@
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     gap: 1rem;
     padding: 1rem;
+    user-select: none;
 }
 
 #settings-container #players-container .player:hover {
     box-shadow: 0 0 7px 5px rgba(0, 0, 0, 0.3);
-    transform: translateY(-5px);
+    transform: translateY(-7.5px);
     transition: 0.15s;
 }
 
-#settings-container #players-container .player {
+#settings-container #players-container .player,
+.modal-content .modal-player-preview {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -62,20 +64,81 @@
     background-color: #2F3136;
     padding: 1rem;
     text-align: center;
-    border-width: 3px;
-    border-style: solid;
+    border: 3px solid #1f2023;
     height: 200px;
     flex: 1;
     transition: 0.15s;
 }
 
-#settings-container #players-container .player .name {
+#settings-container #players-container .player .name,
+.modal-content .modal-player-preview .name {
     font-size: 18px;
 }
 
-#settings-container #players-container .player .profilePicture {
+#settings-container #players-container .player .profilePicture,
+.modal-content .modal-player-preview .profilePicture {
     width: 100px;
     height: 100px;
     border-radius: 100%;
     margin-top: auto;
+    box-shadow: 0 0 3px 3px;
+    color: black;
+}
+
+.modal-content {
+    background-color: #36393F;
+    color: white;
+    border-radius: 5px;
+}
+
+.modal-content .modal-header {
+    border-color: #202225;
+    margin-bottom: 40px;
+}
+
+.modal-content .modal-footer {
+    border-color: #202225;
+}
+
+.modal-content Button {
+    border: none;
+    font-size: 15px;
+    padding: 10px 16px;
+    border-radius: 3px;
+    cursor: pointer;
+    line-height: 18px;
+}
+
+.modal-content .btn-close {
+    filter: invert(100%) sepia(100%) saturate(2%) hue-rotate(62deg) brightness(108%) contrast(101%);
+    opacity: 0.8;
+}
+
+.modal-content #modal-new-player-preview-container {
+    width: 100%;
+}
+
+.modal-content .modal-player-preview {
+    width: 30%;
+    margin: auto;
+    transition: 0s;
+}
+
+.modal-content input {
+    background-color: #2F3136;
+    color: #e8e8e8;
+    border-radius: 3px;
+    border-color: #040405;
+}
+
+.modal-content input:focus {
+    border: 1px solid #5865F2;
+    box-shadow: none;
+    background-color: #2F3136;
+    color: #e8e8e8;
+}
+
+.modal-content .form-label {
+    margin-top: 10px;
+    margin-bottom: 2px;
 }
